--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     
     <button id="btn-1">Paris</button>
     <button id="btn-2">Lyon</button>
+    <button id="btn-3">Marseille</button>
+    <button id="btn-4">Toulon</button>
 
     <p>la bonne reponse est Paris</p>
 
